# Project-ALICE

./: .gitignore  ALICE-architecture.html  ALICE-flow-diagrams.html  CLAUDE.md  Makefile  README.md  app.js  deception_detection_engine.py  pyproject.toml  user_authentication.py  user_authentication_and_management.py  veritas-ai-architecture.docx  veritas-architecture.html  veritas-flow-diagrams.html  video_analysis.py
backend/ml-inference/app/pipelines/psycholinguistic/: __init__.py  analyzer.py
backend/ml-inference/app/pipelines/streaming/: __init__.py  replayer.py  windowed_scorer.py
backend/ml-inference/app/pipelines/transcription/: __init__.py  backends.py  transcriber.py
backend/ml-inference/app/service/: __init__.py  app.py  config.py  publisher.py  runner.py  sessions.py
backend/shared/proto_gen/: landmarks_pb2.py
backend/shared/schemas/: media.py  psycholinguistic.py  score_event.py  transcription.py
backend/shared/telemetry/: __init__.py  landmark_codec.py
backend/workers/app/compression/: __init__.py  audio_extractor.py  feature_extractor.py  models.py  pipeline.py  roi_encoder.py
docs/architecture/: ALICE-Architecture-DataFlow-v2.html  ALICE-Architecture-Document-v2.docx
docs/superpowers/plans/: 2026-05-24-bridge-and-psycholinguistic.md  2026-06-25-whisperx-transcription-vector.md  2026-07-03-protobuf-landmark-telemetry.md  2026-07-10-scoreevent-streaming.md  2026-07-16-psycholinguistic-quality-and-language-gate.md  2026-07-19-live-service-async-shell.md
docs/superpowers/specs/: 2026-04-27-compression-pipeline-and-psycholinguistic-design.md  2026-06-25-whisperx-transcription-vector-design.md  2026-07-03-protobuf-landmark-telemetry-design.md  2026-07-08-scoreevent-streaming-design.md  2026-07-16-psycholinguistic-quality-and-language-gate-design.md  2026-07-19-live-service-async-shell-design.md
proto/: landmarks.proto
scripts/: inspect_landmarks.py  live_client.py  replay_scores.py  run_live_service.py  test_compress_and_analyze.py  test_compression.py  test_psycholinguistic.py  test_transcribe.py
tests/compression/: conftest.py  test_feature_extractor.py  test_media_schema.py  test_models.py  test_pipeline.py
tests/psycholinguistic/: conftest.py  test_analyzer.py  test_cli_smoke.py  test_language_gate.py  test_schemas.py
tests/service/: conftest.py  test_config.py  test_publisher.py  test_rest_api.py  test_runner.py  test_sessions.py  test_websocket.py
tests/streaming/: conftest.py  test_cli_smoke.py  test_convergence.py  test_replayer.py  test_score_event_schema.py  test_windowed_scorer.py
tests/telemetry/: test_budget.py  test_codec_roundtrip.py  test_inspect_cli.py  test_proto_gen.py  test_quantization.py  test_recovery.py
tests/transcription/: conftest.py  test_bridge.py  test_cli_smoke.py  test_fake_backend.py  test_schemas.py  test_transcriber.py  test_whisperx_backend.py
