[project]
name = "project-alice"
version = "0.1.0"
description = "Project ALICE -- Advanced Logic Integrity & Consistency Examiner. Multimodal behavioral anomaly detection for video calls and uploaded recordings."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "ffmpeg-python",
    "mediapipe",
    "librosa",
    "opencv-python-headless",
    "soundfile",
    "numpy",
    "pydantic>=2.0",
    # Psycholinguistic analysis vector (backend/ml-inference). Empath is in the
    # CLAUDE.md stack but the Day-1 analyzer does not import it yet, so it is
    # intentionally omitted until used. The en_core_web_md spaCy model is not a
    # pip dependency; install it via `python -m spacy download en_core_web_md`.
    "spacy>=3.7",
    "nrclex>=4.0",
    "vaderSentiment>=3.3.2",
    # Landmark telemetry wire format (proto/landmarks.proto).
    "protobuf>=5.26",
]

[project.optional-dependencies]
# Tooling required by CLAUDE.md @reviewer agent (ruff + black + mypy --strict
# + pytest at 80% / 90% coverage). Install with: pip install -e ".[dev]"
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
    # Bundles a protoc matching the protobuf runtime; used only by `make proto`
    # to regenerate backend/shared/proto_gen/landmarks_pb2.py (which is committed).
    "grpcio-tools>=1.66",
]

# Transcription vector (backend/ml-inference). Heavy: torch + faster-whisper +
# wav2vec2 alignment. Quarantined behind TranscriptionBackend; install only when
# running the real WhisperXBackend. On Windows + Python 3.13 install torch from
# the appropriate index first; WSL/Linux is the documented fallback runner.
transcription = [
    "whisperx>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: requires heavy models / downloads (WhisperX). Run with -m slow.",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Source lives under backend/ as a PEP 420 namespace package layout (no
# __init__.py files yet). namespaces = true is required for setuptools
# discovery to pick those up; remove if explicit __init__.py files are
# added project-wide.
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
namespaces = true
